--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: 2px 0 0 35px;
+  flex-wrap: wrap;
 
   @media (min-width: $tablet-width) {
     // padding: 5px 0 0 117px;
